// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot - unchecked 1`] = `
<Button
  className="ToggleButton"
  color="default"
  onClick={[Function]}
  size="medium"
  theme="fill"
  title="Testing"
/>
`;

exports[`matches enzyme snapshots matches snapshot 1`] = `
<Button
  className="ToggleButton checked"
  color="default"
  onClick={[Function]}
  size="medium"
  theme="fill"
  title="Testing"
/>
`;
